--- a/package.json
+++ b/package.json
@@ -6,44 +6,44 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
     "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
     "upload": "opennextjs-cloudflare build && opennextjs-cloudflare upload",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
-    "@formatjs/intl-localematcher": "^0.6.1",
-    "@headlessui/react": "^2.2.7",
-    "@mdx-js/loader": "^3.1.0",
-    "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.5.0",
-    "@opennextjs/cloudflare": "^1.6.5",
+    "@formatjs/intl-localematcher": "^0.8.1",
+    "@headlessui/react": "^2.2.9",
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^16.1.6",
+    "@opennextjs/cloudflare": "^1.16.4",
     "@types/mdx": "^2.0.13",
     "@types/negotiator": "^0.6.4",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.12",
-    "lucide-react": "^0.541.0",
+    "framer-motion": "^12.34.0",
+    "lucide-react": "^0.563.0",
     "negotiator": "^1.0.0",
-    "next": "15.4.7",
+    "next": "^16.1.6",
     "qrcode.react": "^4.2.0",
-    "react": "^19",
-    "react-dom": "^19",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "rehype-pretty-code": "^0.14.1",
-    "velite": "^0.2.4"
+    "velite": "^0.3.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.12",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^24",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.0",
-    "postcss": "^8",
-    "tailwindcss": "^4.1.12",
-    "typescript": "^5",
-    "wrangler": "^4.33.1"
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/typography": "^0.5.19",
+    "@types/node": "^25.2.3",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
+    "autoprefixer": "^10.4.24",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.6",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3",
+    "wrangler": "^4.64.0"
   }
 }
